# ftu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  publish_release.yml  rust.yml
src/: csv_to_dart.rs  dart_to_csv.rs  main.rs
