[package]
name = "ftu"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
csv = "1.2.2"
glob = "0.3.1"
regex = "1.9.1"
serde = { version = "1.0.192", features = ["derive"] }
tempfile = "3.20.0"
